Moddif, Methods put
